More files from aurora

--- a/sv-SE/dom/chrome/layout/htmlparser.properties
+++ b/sv-SE/dom/chrome/layout/htmlparser.properties
@@ -129,3 +129,4 @@ errSelfClosing=Självstängande syntax (”/>”) använt på icke-tomt HTML-ele
 errNoCheckUnclosedElementsOnStack=Öppna element i stack.
 errEndTagDidNotMatchCurrentOpenElement=Sluttaggen ”%1$S” matchade inte namnet på det nu öppna elementet (”%2$S”).
 errEndTagViolatesNestingRules=Sluttaggen ”%1$S” bryter mot inkapslingsreglerna.
+errEndWithUnclosedElements=Hittade sluttaggen ”%1$S”, men det fanns fortfarande öppna element.
