--- a/sv-SE/netwerk/necko.properties
+++ b/sv-SE/netwerk/necko.properties
@@ -13,7 +13,7 @@
 5=Skickar begäran till %1$S…
 6=Hämtar data från %1$S…
 7=Ansluter till %1$S…
-8=Läser %1$S 
+8=Läser %1$S\u0020
 9=Skrev %1$S
 10=Väntar på %1$S…
 11=Letade efter %1$S…
@@ -31,9 +31,11 @@ ShowHidden=Visa dolda object
 DirColName=Namn
 DirColSize=Storlek
 DirColMTime=Senast ändrad
-DirFileLabel=Fil: 
+DirFileLabel=Fil:\u0020
 
 PhishingAuth=Du kommer att besöka ”%1$S”. Denna plats kan eventuellt försöka lura dig att tro att du besöker en annan webbplats. Var väldigt försiktig.
 PhishingAuthAccept=Jag förstår och kommer att vara vaksam
 SuperfluousAuth=Du kommer att logga in på platsen ”%1$S” med användarnamnet ”%2$S”, men webbplatsen kräver ingen autentisering. Detta kan vara ett försök att lura dig.\n\nÄr ”%1$S” den webbplats du vill besöka?
 AutomaticAuth=Du kommer att logga in på platsen ”%1$S” med användarnamnet ”%2$S”.
+
+TrackingUriBlocked=Resursen på "%1$S" blockerades eftersom spårningsskydd är aktiverat.
