--- a/sv-SE/dom/chrome/security/security.properties
+++ b/sv-SE/dom/chrome/security/security.properties
@@ -3,20 +3,19 @@
 BlockMixedDisplayContent = Blockerade öppning av blandat visningsinnehåll ”%1$S”
 BlockMixedActiveContent = Blockerade öppning av blandat aktivt innehåll ”%1$S”
 
-# CSP
-ReportOnlyCSPIgnored=Report-only CSP-policy kommer att ignoreras eftersom det finns andra non-report-only CSP-policyer som används.
-# LOCALIZATION NOTE: Do not translate "X-Content-Security-Policy", "X-Content-Security-Policy-Report-Only",  "Content-Security-Policy" or "Content-Security-Policy-Report-Only"
-OldCSPHeaderDeprecated=Rubrikerna X-Content-Security-Policy och X-Content-Security-Report-Only kommer i framtiden att avvecklas. Använd i stället rubrikerna Content-Security-Policy och Content-Security-Report-Only med syntax i enlighet med CSP-specifikationen.
-# LOCALIZATION NOTE: Do not translate "X-Content-Security-Policy/Report-Only" or "Content-Security-Policy/Report-Only"
-BothCSPHeadersPresent=Den här platsen anger både en X-Content-Security-Policy/Report-Only-rubrik och en Content-Security-Policy/Report-Only-rubrik. X-Content-Security-Policy/Report-Only-rubriken kommer att ignoreras.
-
 # CORS
 CrossSiteRequestBlocked=Cross-Origin-begäran blockerad: Same Origin-policyn tillåter inte inläsning av fjärresursen på %1$S. Detta kan åtgärdas genom att flytta resursen till samma domän eller genom att aktivera CORS.
 
 # LOCALIZATION NOTE: Do not translate "Strict-Transport-Security" or "HSTS"
 InvalidSTSHeaders=Webbplatsen angav en ogiltig Strict-Transport-Security-rubrik.
+# LOCALIZATION NOTE: Do not translate "Public-Key-Pins or HPKP"
+InvalidPKPHeaders=Webbplatsen angav en ogiltig Public-Key-Pins-rubrik.
+# LOCALIZATION NOTE: Do not translate "SHA-1"
+SHA1Sig=Denna webbplats använder sig av en SHA-1-certifikat; det rekommenderas att du använder certifikat med signaturalgoritmer som använder hashfunktioner starkare än SHA-1.
 InsecurePasswordsPresentOnPage=Lösenordsfält på en osäker (http://) sida. Det här är en säkerhetsrisk som gör det möjligt att stjäla inloggningsuppgifter.
 InsecureFormActionPasswordsPresent=Lösenordsfält i ett formulär med en osäker (http://) formuläråtgärd. Det här är en säkerhetsrisk som gör det möjligt att stjäla inloggningsuppgifter.
 InsecurePasswordsPresentOnIframe=Lösenordsfält i en osäker (http://) iframe. Det här är en säkerhetsrisk som gör det möjligt att stjäla inloggningsuppgifter.
 LoadingMixedActiveContent=Öppnar blandat (osäkert) aktivt innehåll på en säker sida ”%1$S”
 LoadingMixedDisplayContent=Öppnar blandat (osäkert) visningsinnehåll på en säker sida ”%1$S”
+# LOCALIZATION NOTE: Do not translate "allow-scripts", "allow-same-origin", "sandbox" or "iframe"
+BothAllowScriptsAndSameOriginPresent=En iframe som har både allow-scripts och allow-same-origin för sitt sandbox-attribut kan ta bort sin sandboxning.
