--- a/sv-SE/toolkit/chrome/global/charsetMenu.properties
+++ b/sv-SE/toolkit/chrome/global/charsetMenu.properties
@@ -9,9 +9,6 @@
 #
 # For gbk, gbk.bis and gbk.bis.key are used to trigger string changes in
 # localizations.
-# 
-# Make sure the keys defined here don't collide with
-# charsetMenuAutodet.accesskey in charsetMenu.dtd.
 #
 # In the en-US version of this file, access keys are given to the following:
 # * UTF-8
@@ -58,24 +55,17 @@ windows-1257     = Baltisk (Windows)
 ISO-8859-4       = Baltisk (ISO)
 
 # Central European
-windows-1250.key = C
+windows-1250.key =         C
 windows-1250     = Centraleuropeisk (Windows)
-ISO-8859-2.key   = e
+ISO-8859-2.key   =       e
 ISO-8859-2       = Centraleuropeisk (ISO)
 
 # Chinese, Simplified
-# LOCALIZATION NOTE (gbk.bis.key):
-# gbk.bis.key never appears together with gbk.key and, hence, can be the same.
-gbk.bis.key      = ö
+gbk.bis.key      =          S
 gbk.bis          = Kinesisk, förenklad
-# The strings gbk.key, gbk and gb18030 are no longer used but are retained
-# in order to enable backout after string freeze, just in case.
-gbk.key          = ö
-gbk              = Kinesisk, förenklad (GBK)
-gb18030          = Kinesisk, förenklad (GB18030)
 
 # Chinese, Traditional
-Big5.key         = d
+Big5.key         =          d
 Big5             = Kinesisk, traditionell
 
 # Cyrillic
@@ -89,7 +79,7 @@ IBM866           = Kyrillisk (DOS)
 # Greek
 windows-1253.key = G
 windows-1253     = Grekisk (Windows)
-ISO-8859-7.key   = I
+ISO-8859-7.key   =          I
 ISO-8859-7       = Grekisk (ISO)
 
 # Hebrew
@@ -103,9 +93,9 @@ ISO-8859-8       = Hebreisk, visuell
 # Japanese
 Shift_JIS.key    = J
 Shift_JIS        = Japansk (Shift_JIS)
-EUC-JP.key       = s
+EUC-JP.key       =   s
 EUC-JP           = Japansk (EUC-JP)
-ISO-2022-JP.key  = n
+ISO-2022-JP.key  =     n
 ISO-2022-JP      = Japansk (ISO-2022-JP)
 
 # Korean
@@ -113,11 +103,11 @@ EUC-KR.key       = o
 EUC-KR           = Koreansk
 
 # Thai
-windows-874.key  = T
+windows-874.key  =    T
 windows-874      = Thai
 
 # Turkish
-windows-1254.key = r
+windows-1254.key =   r
 windows-1254     = Turkisk
 
 # Vietnamese
