--- a/sv-SE/suite/chrome/mailnews/charsetTitles.properties
+++ b/sv-SE/suite/chrome/mailnews/charsetTitles.properties
@@ -59,7 +59,6 @@ x-viet-tcvn5712.title = Vietnamesisk (TCVN)
 viscii.title = Vietnamesisk (VISCII)
 x-viet-vps.title = Vietnamesisk (VPS)
 windows-874.title = Thailändsk (Windows-874)
-ibm874.title = Thailändsk (IBM-874)
 armscii-8.title = Armenisk (ARMSCII-8)
 iso-8859-6.title = Arabisk (ISO-8859-6)
 iso-8859-6-i.title = Arabisk (ISO-8859-6-I)
@@ -70,6 +69,7 @@ iso-8859-8-e.title = Hebreisk (ISO-8859-8-E)
 windows-1255.title = Hebreisk (Windows-1255)
 windows-1256.title = Arabisk (Windows-1256)
 x-user-defined.title = Användardefinierad
+ibm866.title = Kyrillisk/Rysk (CP-866)
 gb18030.title = Kinesisk förenklad (GB18030)
 x-mac-arabic.title = Arabisk (MacArabic)
 x-mac-farsi.title = Farsi (MacFarsi)
