Fx 36a: update, fix en nits

--- a/nl/browser/chrome/browser/shellservice.properties
+++ b/nl/browser/chrome/browser/shellservice.properties
@@ -21,7 +21,7 @@ setDefaultBrowserNever.accesskey   = D
 # These strings are used as an alternative to the ones above, in a modal dialog.
 # %S will be replaced by brandShortName
 setDefaultBrowserTitle=Standaardbrowser
-setDefaultBrowserMessage=%S is momenteel niet ingesteld als uw standaardbrowser. Wilt u %S uw standaardbrowser maken?
+setDefaultBrowserMessage=%S is momenteel niet ingesteld als uw standaardbrowser. Wilt u het uw standaardbrowser maken?
 setDefaultBrowserDontAsk=Deze controle altijd uitvoeren bij het starten van %S
 
 desktopBackgroundLeafNameWin=Bureaubladachtergrond.bmp
