--- a/nl/browser/chrome/browser/syncSetup.properties
+++ b/nl/browser/chrome/browser/syncSetup.properties
@@ -3,12 +3,12 @@
 # file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
 button.syncOptions.label       = Sync-opties
-button.syncOptionsDone.label   = Klaar
+button.syncOptionsDone.label   = Gereed
 button.syncOptionsCancel.label = Annuleren
 
 invalidEmail.label          = Ongeldig e-mailadres
 serverInvalid.label         = Voer een geldige server-URL in
-usernameNotAvailable.label  = Reeds in gebruik
+usernameNotAvailable.label  = Wordt al gebruikt
 
 verifying.label = Verifiëren…
 
