--- a/es-MX/toolkit/chrome/global/aboutSupport.properties
+++ b/es-MX/toolkit/chrome/global/aboutSupport.properties
@@ -83,3 +83,4 @@ webglRenderer = Procesador WebGL
 minLibVersions = Versión mínima esperada
 loadedLibVersions = Versión en uso
 
+hasSeccompBPF = Seccomp-BPF (sistema de filtro de llamadas)
