--- a/es-MX/toolkit/chrome/global/aboutTelemetry.properties
+++ b/es-MX/toolkit/chrome/global/aboutTelemetry.properties
@@ -9,6 +9,7 @@ pageSubtitle = Esta página muestra la información de rendimiento, hardware, us
 
 generalDataHeadingName = Nombre
 
+generalDataHeadingValue = Valor
 
 slowSqlMain = Sentencias SQL lentas en el hilo principal
 
@@ -49,6 +50,7 @@ enableTelemetry = Activar Telemetry
 
 keysHeader = Propiedad
 
+valuesHeader = Valor
 
 addonTableID = ID del complemento
 
