--- a/es-MX/browser/chrome/browser/customizableui/customizableWidgets.properties
+++ b/es-MX/browser/chrome/browser/customizableui/customizableWidgets.properties
@@ -115,3 +115,4 @@ web-apps-button.tooltiptext = Descubrir aplicaciones
 # widget is only visible after WebIDE has been started once (Tools > Web Developers > WebIDE)
 # %S is the keyboard shortcut
 devtools-webide-button2.label = WebIDE
+devtools-webide-button2.tooltiptext = Abrir WebIDE (%S)
