--- a/es-MX/browser/chrome/browser/devtools/timeline.properties
+++ b/es-MX/browser/chrome/browser/devtools/timeline.properties
@@ -59,3 +59,8 @@ timeline.markerDetailFormat=%1$S (%2$S)
 timeline.markerDetail.start=Inicio:
 timeline.markerDetail.end=Fin:
 timeline.markerDetail.duration=Duración
+timeline.markerDetail.consoleTimerName=Nombre del temporizador:
+timeline.markerDetail.DOMEventType=Tipo de evento:
+timeline.markerDetail.DOMEventPhase=Fase:
+timeline.markerDetail.DOMEventTargetPhase=Objetivo
+timeline.markerDetail.DOMEventCapturingPhase=Captura
