--- a/es-MX/dom/chrome/dom/dom.properties
+++ b/es-MX/dom/chrome/dom/dom.properties
@@ -210,3 +210,4 @@ KeyNameDeadKeysWarning=Los valores de KeyboardEvent.key que comienzan con "Dead"
 ImportXULIntoContentWarning=Importar nodos XUL en un documento de contenido está desaprobado. Esta funcionalidad puede desaparecer pronto.
 XMLDocumentLoadPrincipalMismatch=El uso de document.load está prohibido en documentos que vienen de otras ventanas. Sólo la ventana en la que se ha creado un documento puede llamar a .load en ese documento. Es preferible usar XMLHttpRequest en su lugar.
 # LOCALIZATION NOTE: Do not translate "IndexedDB".
+IndexedDBTransactionAbortNavigation=La operación IndexedDB que aún no se había completado se abandonó por la navegación de páginas.
