[pt-BR] update from Pootle (firefox)

--- a/pt-BR/browser/chrome/browser/downloads/downloads.properties
+++ b/pt-BR/browser/chrome/browser/downloads/downloads.properties
@@ -62,6 +62,7 @@ unblockTypeMalware=Este arquivo contém um vírus ou outro malware que irá dani
 unblockTypePotentiallyUnwanted=Este arquivo, disfarçado como um download útil, vai fazer alterações inesperadas em seus programas e configurações.
 unblockTypeUncommon=Este arquivo foi baixado de um site desconhecido e potencialmente perigoso e pode não ser seguro abri-lo.
 unblockTip=Você pode procurar por uma fonte alternativa de download ou tentar baixar o arquivo novamente mais tarde.
+unblockButtonContinue=Desbloquear mesmo assim
 
 # LOCALIZATION NOTE (sizeWithUnits):
 # %1$S is replaced with the size number, and %2$S with the measurement unit.
