--- a/pt-BR/browser/chrome/browser/loop/loop.properties
+++ b/pt-BR/browser/chrome/browser/loop/loop.properties
@@ -286,6 +286,7 @@ tour_label=Tour
 
 ## LOCALIZATION NOTE(rooms_default_room_name_template): {{conversationLabel}}
 ## will be replaced by a number. For example "Conversation 1" or "Conversation 12".
+rooms_default_room_name_template=Conversa {{conversationLabel}}
 rooms_leave_button_label=Sair
 rooms_list_copy_url_tooltip=Copiar link
 ## LOCALIZATION NOTE (rooms_list_current_conversations):
@@ -293,8 +294,14 @@ rooms_list_copy_url_tooltip=Copiar link
 ## http://developer.mozilla.org/en/docs/Localization_and_Plurals
 ## We prefer to have no number in the string, but if you need it for your
 ## language please use {{num}}.
+rooms_list_current_conversations=Conversa atual;Conversas atuais
 rooms_list_delete_tooltip=Excluir conversa
 rooms_list_deleteConfirmation_label=Tem certeza?
+rooms_list_no_current_conversations=Não há conversas atuais
+rooms_name_this_room_label=Nomeie essa conversa
+rooms_name_this_room_tooltip2=Clique para editar o nome da conversa
+rooms_name_change_failed_label=A conversa não pode ser renomeada
+rooms_new_room_button_label=Iniciar uma conversa
 rooms_only_occupant_label=Você é o primeiro aqui.
 rooms_panel_title=Escolha uma conversa ou comece uma nova
 rooms_room_full_label=Já há duas pessoas nesta conversa.
