--- a/pt-BR/browser/chrome/browser/places/places.properties
+++ b/pt-BR/browser/chrome/browser/places/places.properties
@@ -74,6 +74,7 @@ tagResultLabel=Tag
 bookmarkResultLabel=Favorito
 switchtabResultLabel=Tab
 keywordResultLabel=Palavra-chave
+searchengineResultLabel=Pesquisar
 
 
 # LOCALIZATION NOTE (lockPrompt.text)
