--- a/pt-BR/security/manager/chrome/pippki/pippki.properties
+++ b/pt-BR/security/manager/chrome/pippki/pippki.properties
@@ -144,7 +144,9 @@ writeFileUnknownError=Erro desconhecido
 addExceptionBrandedWarning2=Você irá substituir o modo como o %S identifica este site.
 addExceptionInvalidHeader=Este site tenta identificar-se com informação inválida.
 addExceptionDomainMismatchShort=Site incorreto
+addExceptionDomainMismatchLong2=O certificado pertence a um site diferente, o que pode significar que alguém está tentando se passar por este site.
 addExceptionExpiredShort=Informação desatualizada
+addExceptionExpiredLong2=O certificado não é válido no momento. Ele pode ter sido roubado ou perdido e poderia ser usado por uma pessoa para representar este site.
 addExceptionUnverifiedOrBadSignatureShort=Identidade desconhecida
 addExceptionValidShort=Certificado válido
 addExceptionValidLong=Este site fornece identificação válida e homologada. Não é necessário adicionar uma exceção.
