--- a/pt-BR/toolkit/chrome/global/aboutSupport.properties
+++ b/pt-BR/toolkit/chrome/global/aboutSupport.properties
@@ -83,3 +83,4 @@ webglRenderer = Renderização WebGL
 minLibVersions = Versão mínima esperada
 loadedLibVersions = Versão em uso
 
+hasSeccompBPF = Seccomp-BPF (Sistema de filtragem de chamadas)
