--- a/pt-BR/browser/chrome/browser/devtools/webide.properties
+++ b/pt-BR/browser/chrome/browser/devtools/webide.properties
@@ -41,6 +41,7 @@ error_cantConnectToApp=Não foi possível conectar-se ao aplicativo: %1$S
 # Variable: error message (in english)
 error_cantFetchAddonsJSON=Não foi possível receber a lista de aplicativos: %S
 
+error_appProjectsLoadFailed=Não é possível carregar a lista de projetos. Isso pode ocorrer se já usou este perfil com uma versão mais recente do Firefox.
 
 addons_stable=estável
 addons_unstable=instável
@@ -73,3 +74,4 @@ status_error=ERROS
 status_unknown=DESCONHECIDO
 
 # Preferences
+devicepreferences_reset_default=Restaurar para o padrão
