--- a/pt-BR/browser/chrome/browser/shellservice.properties
+++ b/pt-BR/browser/chrome/browser/shellservice.properties
@@ -18,6 +18,9 @@ setDefaultBrowserNever.accesskey   = N
 # LOCALIZATION NOTE (setDefaultBrowserTitle, setDefaultBrowserMessage, setDefaultBrowserDontAsk):
 # These strings are used as an alternative to the ones above, in a modal dialog.
 # %S will be replaced by brandShortName
+setDefaultBrowserTitle=Navegador padrão
+setDefaultBrowserMessage=%S não está definido como seu navegador padrão. Gostaria de torná-lo seu navegador padrão?
+setDefaultBrowserDontAsk=Sempre verificar ao iniciar %S.
 
 desktopBackgroundLeafNameWin=Papel de parede.bmp
 DesktopBackgroundDownloading=Salvando imagem…
