--- a/pt-BR/dom/chrome/security/security.properties
+++ b/pt-BR/dom/chrome/security/security.properties
@@ -11,6 +11,7 @@ InvalidSTSHeaders=O site especificou um cabeçalho Strict-Transport-Security inv
 # LOCALIZATION NOTE: Do not translate "Public-Key-Pins or HPKP"
 InvalidPKPHeaders=O site especificou um cabeçalho Public-Key-Pins inválido.
 # LOCALIZATION NOTE: Do not translate "SHA-1"
+SHA1Sig=Este site usa um certificado SHA-1; é recomendado o uso de certificados com os algoritmos da assinatura que usem funções hash mais fortes que SHA-1.
 InsecurePasswordsPresentOnPage=Campos de senha presentes em uma página insegura (http://). Este é um risco de segurança que permite que credenciais de login do usuário sejam roubadas.
 InsecureFormActionPasswordsPresent=Campos de senha presentes em um formulário que será enviado a uma página insegura (http://). Este é um risco de segurança que permite que credenciais de login do usuário sejam roubadas.
 InsecurePasswordsPresentOnIframe=Campos de senha presentes em um iframe inseguro (http://). Este é um risco de segurança que permite que credenciais de login do usuário sejam roubadas.
