--- a/pt-BR/services/sync/sync.properties
+++ b/pt-BR/services/sync/sync.properties
@@ -23,7 +23,11 @@ error.logout.description = O Sync encontrou um erro ao conectar. Provavelmente e
 error.sync.title = Erro ao sincronizar
 error.sync.description = Houve um problema ao sincronizar: %1$S. O Sync irá tentar de novo automaticamente.
 error.sync.prolonged_failure = A sincronização não pôde ser efetuada nos últimos %1$S dias. Verifique suas configurações de rede.
+error.sync.serverStatusButton.label = Status do servidor
+error.sync.serverStatusButton.accesskey = v
 error.sync.needUpdate.description = Você precisa atualizar o Firefox Sync para continuar sincronizando seus dados.
+error.sync.needUpdate.label = Atualizar o Firefox Sync
+error.sync.needUpdate.accesskey = u
 error.sync.tryAgainButton.label = Sincronizar agora
 error.sync.tryAgainButton.accesskey = n
 warning.sync.quota.label = Aproximando-se da cota no servidor
