[ta] update from Pootle (firefox)

--- a/ta/browser/chrome/browser/devtools/timeline.properties
+++ b/ta/browser/chrome/browser/devtools/timeline.properties
@@ -17,10 +17,12 @@ timeline.label=காலவரிசை
 
 # LOCALIZATION NOTE (timeline.panelLabel):
 # This is used as the label for the toolbox panel.
+timeline.panelLabel=நேரவரை பலகம்
 
 # LOCALIZATION NOTE (timeline.tooltip):
 # This string is displayed in the tooltip of the tab when the timeline is
 # displayed inside the developer tools window.
+timeline.tooltip=நேரவரை செயல்திறன்
 
 # LOCALIZATION NOTE (timeline.tick):
 # This string is displayed in the timeline overview, for delimiting ticks
@@ -29,16 +31,22 @@ timeline.tick=%S ms
 
 # LOCALIZATION NOTE (timeline.records):
 # This string is displayed in the timeline waterfall, as a title for the menu.
+timeline.records=பதிவுகள்
 
 # LOCALIZATION NOTE (timeline.label.*):
 # These strings are displayed in the timeline waterfall, identifying markers.
 timeline.label.styles=பாணிகள்
+timeline.label.reflow=மீளோடை
+timeline.label.paint=பூச்சு
+timeline.label.javascript=JavaScript
+timeline.label.domevent=DOM நிகழ்வு
 timeline.label.consoleTime=பணிமுனை
 
 # LOCALIZATION NOTE (graphs.memory):
 # This string is displayed in the memory graph of the Performance tool,
 # as the unit used to memory consumption. This label should be kept
 # AS SHORT AS POSSIBLE so it doesn't obstruct important parts of the graph.
+graphs.memory=மெபை
 
 # LOCALIZATION NOTE (timeline.markerDetailFormat):
 # Some timeline markers come with details, like a size, a name, a js function.
@@ -49,3 +57,11 @@ timeline.markerDetailFormat=%1$S (%2$S)
 # LOCALIZATION NOTE (time.markerDetail.*):
 # Strings used in the waterfall sidebar.
 timeline.markerDetail.start=தொடங்கு:
+timeline.markerDetail.end=முடிவு:
+timeline.markerDetail.duration=கால அளவு:
+timeline.markerDetail.consoleTimerName=கடிகாரத்தின் பெயர்:
+timeline.markerDetail.DOMEventType=நிகழ்வு வகை:
+timeline.markerDetail.DOMEventPhase=நிலை:
+timeline.markerDetail.DOMEventTargetPhase=இலக்கு
+timeline.markerDetail.DOMEventCapturingPhase=கைப்பற்று
+timeline.markerDetail.DOMEventBubblingPhase=குமிழ்தல்
