--- a/ta/browser/chrome/browser/syncQuota.properties
+++ b/ta/browser/chrome/browser/syncQuota.properties
@@ -7,7 +7,7 @@ collection.bookmarks.label = புத்தகக்குறிகள்
 collection.history.label   = வரலாறு
 collection.passwords.label = கடவுச்சொற்கள்
 collection.prefs.label     = விருப்பங்கள்
-collection.tabs.label      = தத்தல்கள்
+collection.tabs.label      = கீற்றுகள்
 
 # LOCALIZATION NOTE (quota.usageNoQuota.label): %1$S and %2$S are numeric value
 # and unit (as defined in the download manager) of the amount of space occupied
