--- a/ta/dom/chrome/accessibility/AccessFu.properties
+++ b/ta/dom/chrome/accessibility/AccessFu.properties
@@ -145,7 +145,7 @@ hidden         =      மறைந்துள்ள
 # Tab states
 tabLoading     =      ஏற்றுகிறது
 tabLoaded      =      ஏற்றியது
-tabNew         =      புதிய தத்தல்
+tabNew         =      புதிய கீற்று
 tabLoadStopped =      ஏற்றுதல் நிறுத்தப்பட்டது
 tabReload      =      ஏற்றுகிறது
 
@@ -180,7 +180,7 @@ quicknav_Heading     = தலைப்புகள்
 quicknav_ListItem    = பட்டியல் உருப்படிகள்
 quicknav_Link        = இணைப்புகள்
 quicknav_List        = பட்டியல்கள்
-quicknav_PageTab     = பக்கத் தத்தல்கள்
+quicknav_PageTab     = பக்கக் கீற்றுகள்
 quicknav_RadioButton = ஒற்றைத்தேர்வு பொத்தான்கள்
 quicknav_Separator   = பிரிப்பான்கள்
 quicknav_Table       = அட்டவணைகள்
