--- a/ta/services/sync/sync.properties
+++ b/ta/services/sync/sync.properties
@@ -11,8 +11,8 @@ lastSync2.label = கடைசி ஒத்திசைவு: %S
 mobile.label = மொபைல் புத்தகக்குறிகள்
 
 remote.pending.label = Remote tabs are being synced…
-remote.missing2.label = உங்கள் மற்ற சாதனங்கள் மீண்டும் அவற்றின் தத்தல்களை அனுக, ஒத்திசைக்கவும்
-remote.opened.label = எல்லா தொலை தத்தல்களும் ஏற்கனவே திறந்துள்ளன
+remote.missing2.label = மற்ற சாதனங்களின் கீற்றுகளை அணுக அவைகளை ஒத்திசைக்கவும்
+remote.opened.label = எல்லா தொலைநிலை கீற்றுகளும் ஏற்கனவே திறந்துள்ளன
 remote.notification.label = Recent desktop tabs will be available once they sync
 
 error.login.title = உள்நுழையும்போது பிழை
