--- a/ta/browser/chrome/browser/devtools/gclicommands.properties
+++ b/ta/browser/chrome/browser/devtools/gclicommands.properties
@@ -1385,12 +1385,12 @@ appCacheListViewEntry=உள்ளீட்டைக் காண்
 
 # LOCALIZATION NOTE (appCacheViewEntryDesc) A very short string used to describe
 # the function of the "appcache viewentry" command.
-appCacheViewEntryDesc=குறிப்பிட்ட தேக்கக உள்ளீட்டுத் தகவலைக் கொண்ட ஒரு புதிய தத்தலைத் திற.
+appCacheViewEntryDesc=குறிப்பிட்ட தேக்கக உள்ளீட்டுத் தகவலைக் கொண்ட ஒரு புதிய கீற்றைத் திற.
 
 # LOCALIZATION NOTE (appCacheViewEntryManual) A fuller description of the
 # 'appcache viewentry' command, displayed when the user asks for help on what it
 # does.
-appCacheViewEntryManual=குறிப்பிட்ட தேக்கக உள்ளீட்டுத் தகவலைக் கொண்ட ஒரு புதிய தத்தலைத் திற.
+appCacheViewEntryManual=குறிப்பிட்ட தேக்கக உள்ளீட்டுத் தகவலைக் கொண்ட ஒரு புதிய கீற்றைத் திற.
 
 # LOCALIZATION NOTE (appCacheViewEntryKey) A very short string used to describe
 # the function of the "key" parameter of the 'appcache viewentry' command.
