--- a/ta/browser/chrome/browser/places/places.properties
+++ b/ta/browser/chrome/browser/places/places.properties
@@ -52,9 +52,9 @@ searchHistory=தேடும் வரலாறு
 searchDownloads=பதிவிறக்கங்களில் தேடு
 
 tabs.openWarningTitle=திறத்தலை உறுதிப்படுத்து
-tabs.openWarningMultipleBranded=நீங்கள் %S தத்தல்களை திறந்துள்ளீர்கள். இது பக்கங்களை ஏற்றும் போது %Sஐ மெதுவாக்கும். இதனை தொடர வேண்டுமா?
-tabs.openButtonMultiple=தத்தல்களை திற
-tabs.openWarningPromptMeBranded=பல தத்தல்களை திறக்கையில் %Sஐ மெதுவாக்கும் போது என்னை எச்சரி
+tabs.openWarningMultipleBranded=நீங்கள் %S கீற்றுகளை திறந்துள்ளீர்கள். இது பக்கங்களை ஏற்றும் போது %Sஐ மெதுவாக்கும். இதனை தொடர வேண்டுமா?
+tabs.openButtonMultiple=கீற்றுகளைத் திற
+tabs.openWarningPromptMeBranded=பல கீற்றுகளைத் திறக்கையில் %S மெதுவாகையில் என்னை எச்சரி
 
 SelectImport=புத்தகக்குறிகள் கோப்பினை இறக்கு
 EnterExport=புத்தகக்குறிகள் கோப்பினை ஏற்று
