--- a/ta/browser/chrome/browser/tabview.properties
+++ b/ta/browser/chrome/browser/tabview.properties
@@ -2,11 +2,11 @@
 # License, v. 2.0. If a copy of the MPL was not distributed with this
 # file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
-tabview.button.searchTabs=தத்தல் குழுக்களை தேடு
-tabview.button.exitTabGroups=தத்தல் குழுக்களிலிருந்து வெளியேறு
-tabview.groupItem.defaultName=இந்த தத்தல் குழுவை பெயரிடு…
+tabview.button.searchTabs=கீற்று குழுக்களை தேடு
+tabview.button.exitTabGroups=கீற்று குழுக்களிலிருந்து வெளியேறு
+tabview.groupItem.defaultName=இந்தக் கீற்று குழுவை பெயரிடு
 tabview.groupItem.closeGroup=குழுவை மூடு
 tabview.groupItem.undoCloseGroup=மூடிய குழுவை மறை
 tabview.groupItem.discardClosedGroup=மூடிய குழுவை அப்புறப்படுத்து
-tabview.search.otherWindowTabs=வேறு சாளரங்களிலிருந்து தத்தல்கள்
-tabview.notification.sessionStore=அடுத்த முறை நீங்கள் %S ஐத் தொடங்கும் போது தத்தல்கள் மற்றும் குழுக்கள் தானாக மீட்டமைக்கப்படும்.
+tabview.search.otherWindowTabs=மற்ற சாளரங்களிலிருந்த கீற்றுகள்
+tabview.notification.sessionStore=அடுத்த முறை நீங்கள் %S ஐத் தொடங்கும் போது கீற்றுகள் மற்றும் குழுக்கள் தானாக மீட்டமைக்கப்படும்.
