--- a/ta/browser/chrome/browser/taskbar.properties
+++ b/ta/browser/chrome/browser/taskbar.properties
@@ -2,8 +2,8 @@
 # License, v. 2.0. If a copy of the MPL was not distributed with this
 # file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
-taskbar.tasks.newTab.label=ஒரு புதிய தத்தலை திற
-taskbar.tasks.newTab.description=ஒரு புதிய உலாவி தத்தலை திறக்கவும்.
+taskbar.tasks.newTab.label=புதிய கீற்றைத் திற
+taskbar.tasks.newTab.description=ஒரு புதிய உலாவி கீற்றைத் திற.
 taskbar.tasks.newWindow.label=புதிய சாளரத்தை திற
 taskbar.tasks.newWindow.description=ஒரு புதிய உலாவி சாளரத்தை திறக்கவும்.
 taskbar.tasks.newPrivateWindow.label=புதிய தனிப்பட்ட சாளரம்
