--- a/ta/dom/chrome/accessibility/mac/accessible.properties
+++ b/ta/dom/chrome/accessibility/mac/accessible.properties
@@ -21,7 +21,7 @@ cycle   =       சுழற்சி
 # The Role Description for AXWebArea (the web widget). Like in Safari.
 htmlContent = HTML உள்ளடக்கம்
 # The Role Description for the Tab button.
-tab     =       தத்தல்
+tab     =       கீற்று
 # The Role Description for definition list dl, dt and dd
 term    =       தவனை
 definition =    வரையறை
