--- a/ta/toolkit/chrome/global/autocomplete.properties
+++ b/ta/toolkit/chrome/global/autocomplete.properties
@@ -11,7 +11,7 @@ searchWithEngine = %S மூலம் தேடவும்
 # This format was chosen because the provider can also end with "Search"
 # (e.g.: MSN Search).
 searchWithEngineForQuery = %2$S — %1$S மூலம் தேடு\u0020
-switchToTab = தத்தலுக்கு மாறு
+switchToTab = கீற்றிற்கு மாறு
 # LOCALIZATION NOTE (visitURL):
 # %S is the URL to visit.
 visitURL = %S பார்
