[th] update from Pootle (firefox)

--- a/th/browser/chrome/browser/browser.properties
+++ b/th/browser/chrome/browser/browser.properties
@@ -580,6 +580,9 @@ getUserMedia.sharingMenuCameraMicrophone = %S (กล้องและไมโ
 getUserMedia.sharingMenuCameraMicrophoneApplication = %S (กล้อง ไมโครโฟน และแอพพลิเคชัน)
 getUserMedia.sharingMenuCameraMicrophoneScreen = %S (กล้อง ไมโครโฟน และหน้าจอ)
 getUserMedia.sharingMenuCameraMicrophoneWindow = %S (กล้อง ไมโครโฟน และหน้าต่าง)
+getUserMedia.sharingMenuCameraApplication = %S (กล้องและแอพพลิเคชัน)
+getUserMedia.sharingMenuCameraScreen = %S (กล้องและหน้าจอ)
+getUserMedia.sharingMenuCameraWindow = %S (กล้องและหน้าต่าง)
 getUserMedia.sharingMenuMicrophoneApplication = %S (ไมโครโฟนและแอพพลิเคชัน)
 getUserMedia.sharingMenuMicrophoneScreen = %S (ไมโครโฟนและหน้าจอ)
 getUserMedia.sharingMenuMicrophoneWindow = %S (ไมโคโฟนและหน้าต่าง)
@@ -606,3 +609,7 @@ customizeTips.tip0.learnMore = เรียนรู้เพิ่ม
 # the appmenu labels and buttons that appear when an update is staged for
 # installation or a background update has failed and a manual download is required.
 # %S is brandShortName
+appmenu.restartNeeded.description = เริ่ม %S ใหม่เพื่อใช้การปรับรุ่น
+appmenu.updateFailed.description = การปรับรุ่นทำงานเบื้องหลังล้มเหลว โปรดดาวน์โหลดการปรับรุ่น
+appmenu.restartBrowserButton.label = เริ่ม %S ใหม่
+appmenu.downloadUpdateButton.label = ดาวน์โหลดการปรับรุ่น
