--- a/th/browser/chrome/browser/places/places.properties
+++ b/th/browser/chrome/browser/places/places.properties
@@ -83,6 +83,8 @@ OrganizerQueryTags=แท็ก
 tagResultLabel=ป้าย
 bookmarkResultLabel=ที่คั่นหน้า
 switchtabResultLabel=Tab
+keywordResultLabel=คำสำคัญ
+searchengineResultLabel=ค้นหา
 
 
 # LOCALIZATION NOTE (lockPrompt.text)
