--- a/th/dom/chrome/accessibility/AccessFu.properties
+++ b/th/dom/chrome/accessibility/AccessFu.properties
@@ -51,8 +51,28 @@ label          =       ป้ายข้อความ
 passwordtext   =       ข้อความรหัสผ่าน
 radiomenuitem  =       รายการเมนูแบบปุ่มวิทยุ
 textcontainer  =       ตัวบรรจุข้อความ
+togglebutton   =       ปุ่มสลับค่า
+treetable      =       ตารางแบบต้นไม้
+header         =       หัวเรื่อง
+footer         =       ท้ายเรื่อง
+paragraph      =       ย่อหน้า
+entry          =       entry
+caption        =       ป้ายบรรยาย
+heading        =       หัวข้อ
+section        =       ส่วน
+form           =       แบบฟอร์ม
+comboboxlist   =       combo box list
+comboboxoption =       combo box option
 imagemap       =       image map
+listboxoption  =       ตัวเลือก
+listbox        =       list box
+flatequation   =       flat equation
+gridcell       =       gridcell
+note           =       หมายเหตุ
 figure         =       figure
+definitionlist =       รายการคำจำกัดความ
+term           =       คำ
+definition     =       คำจำกัดความ
 
 # More sophisticated roles which are not actual numeric roles
 textarea       =       บริเวณข้อความ
@@ -77,6 +97,7 @@ listItemsCount =       #1 รายการ
 # LOCALIZATION NOTE: # %1$S is the position of the item n the set.
 # %2$S is the total number of such items in the set.
 # An expanded example would read "2 of 5".
+objItemOfN      =       %1$S จาก %2$S
 
 # Landmark announcements
 banner         =       ป้าย
@@ -89,9 +110,11 @@ search         =       ค้นหา
 # LOCALIZATION NOTE (tblColumnInfo): Semi-colon list of plural forms.
 # Number of columns within the table.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
+tblColumnInfo = กับ 1 คอลัมน์
 # LOCALIZATION NOTE (tblRowInfo): Semi-colon list of plural forms.
 # Number of rows within the table or grid.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
+tblRowInfo = และ 1 แถว
 
 # table or grid cell information
 columnInfo = คอลัมน์ %S
@@ -203,6 +226,7 @@ buttonmenuAbbr     =       เมนูปุ่ม
 whitespaceAbbr     =       ช่องว่าง
 pagetablistAbbr    =       รายการแท็บ
 canvasAbbr         =       canvas
+checkmenuitemAbbr  =       รายการเมนูกาเครื่องหมาย
 labelAbbr          =       ป้ายข้อความ
 passwordtextAbbr   =       passwdtxt
 radiomenuitemAbbr  =       รายการเมนูแบบปุ่มวิทยุ
@@ -217,9 +241,13 @@ captionAbbr        =       ป้ายบรรยาย
 headingAbbr        =       หัวข้อ
 sectionAbbr        =       ส่วน
 formAbbr           =       แบบฟอร์ม
+comboboxlistAbbr   =       combo box list
+comboboxoptionAbbr =       combo box option
 imagemapAbbr       =       imgmap
 listboxoptionAbbr  =       ตัวเลือก
 listboxAbbr        =       กล่องรายการ
+flatequationAbbr   =       flat equation
+gridcellAbbr       =       gridcell
 noteAbbr           =       หมายเหตุ
 figureAbbr         =       fig
 definitionlistAbbr =       รายการคำจำกัดความ
@@ -237,3 +265,7 @@ tblColumnInfoAbbr = #1c;#1c
 tblRowInfoAbbr = #1r;#1r
 cellInfoAbbr = c%Sr%S
 
+stateCheckedAbbr = (x)
+stateUncheckedAbbr = ( )
+statePressedAbbr = (x)
+stateUnpressedAbbr = ( )
