--- a/th/toolkit/chrome/global/charsetMenu.properties
+++ b/th/toolkit/chrome/global/charsetMenu.properties
@@ -61,6 +61,7 @@ ISO-8859-2.key   =       I
 ISO-8859-2       = ยุโรปกลาง (ISO)
 
 # Chinese, Simplified
+gbk.bis.key      =          S
 gbk.bis          = จีนตัวย่อ
 
 # Chinese, Traditional
