[xh] update from Pootle (firefox)

--- a/xh/webapprt/webapprt/overrides/dom.properties
+++ b/xh/webapprt/webapprt/overrides/dom.properties
@@ -66,7 +66,7 @@ nsIJSONEncodeDeprecatedWarning=i-nsIJSON.encode ayamkelwanga. Sicela usebenzise 
 nsIDOMWindowInternalWarning=Ukusetyenziswa kwe-nsIDOMWindowInternal akwamkelwanga. Ukusetyenziswa kwe-nsIDOMWindow akwamkelwanga.
 InputEncodingWarning=Ukusetyenziswa kwe-inputEncoding akwamkelwanga.
 # LOCALIZATION NOTE: Do not translate "MozBeforePaint" and "mozRequestAnimationFrame"
-MozBeforePaintWarning=Imicimbi ye-MozBeforePaint ayisaxhaswa. I-mozRequestAnimationFrame ifanele ipasiswe njenge-non-null callback argument.
+MozBeforePaintWarning=Imicimbi ye-MozBeforePaint ayisaxhaswa. I-mozRequestAnimationFrame ifanele ipasiswe ingxelo ebuyileyo engaphuthanga.
 FullScreenDeniedBlocked=Isicelo seskrini esipheleleyo sikhatyiwe ngenxa yokuba le domeyini ivaliwe ekubeni isebenzise iskrini esipheleleyo ngumsebenzisi.
 FullScreenDeniedDisabled=Isicelo seskrini esipheleleyo sikhatyiwe ngenxa yokuba i-API yeskrini esipheleleyo yenziwe ayasebenza ngokweepriferensi zomsebenzisi.
 FullScreenDeniedFocusedPlugin=Isicelo seskrini esipheleleyo sikhatyiwe ngenxa yokuba isifakelo sewindow sijolisiwe.
