[pt-BR] update from Pootle (mobile)

--- a/pt-BR/mobile/android/chrome/browser.properties
+++ b/pt-BR/mobile/android/chrome/browser.properties
@@ -322,7 +322,9 @@ remoteNotificationGenericName=Aplicativo
 # the remote debugger server is listening.
 remoteNotificationMessage=Conectando-se à porta %S
 # LOCALIZATION NOTE (remoteStartNotificationTitle): %S is the name of the app.
+remoteStartNotificationTitle=Ative a depuração para %S
 # LOCALIZATION NOTE (remoteStartNotificationMessage):
+remoteStartNotificationMessage=Toque para ativar a depuração remota
 
 # Helper apps
 helperapps.open=Abrir
@@ -389,3 +391,4 @@ feedHandler.subscribeWith=Inscrever com
 # This string is shown in the console when someone uses deprecated NativeWindow apis.
 # %1$S=name of the api that's deprecated, %2$S=New API to use. This may be a url to
 # a file they should import or the name of an api.
+nativeWindow.deprecated=%1$S está obsoleto. No lugar, use %2$S
