--- a/pt-BR/mobile/android/chrome/webapp.properties
+++ b/pt-BR/mobile/android/chrome/webapp.properties
@@ -56,3 +56,4 @@ retrievalFailedTitle=Falha em #1 atualização;Falha em #1 atualizações
 # example: Failed to retrieve updates for Foo, Bar, Baz
 retrievalFailedMessage=Falha no recebimento da atualização de %1$S;Falha no recebimento das atualizações de %1$S
 
+webappsDisabled=A instalação de aplicativos está desativada
