--- a/pt-BR/mobile/android/chrome/handling.properties
+++ b/pt-BR/mobile/android/chrome/handling.properties
@@ -2,6 +2,7 @@
 # License, v. 2.0. If a copy of the MPL was not distributed with this
 # file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
+download.blocked=Não é possível baixar o arquivo
 protocol.failed=Não foi possível encontrar um aplicativo para abrir este link
 # A very short string shown in the button toast when no application can open the url
 protocol.toast.search=Procurar
