[pt-BR] update from Pootle (seamonkey)

--- a/pt-BR/suite/chrome/common/dataman/dataman.properties
+++ b/pt-BR/suite/chrome/common/dataman/dataman.properties
@@ -5,20 +5,37 @@
 # cookies
 cookies.expireAtEndOfSession=no final da sessão
 
+cookies.secureOnly.httponly=Apenas conexões criptografadas e sem acesso a script
 cookies.secureOnly.all=Somente conexões criptografadas
+cookies.anyConnection.httponly=Qualquer tipo de conexão e sem acesso a script
 cookies.anyConnection.all=Qualquer tipo de conexão
 
+cookies.deleteSelectedTitle=Remover Cookies selecionados
 
 # permissions
 perm.cookie.label=Definir Cookies
+perm.geo.label=Compartilhar localização
 perm.image.label=Carregar imagens
+perm.indexedDB.label=Armazenar bancos de dados locais
+perm.install.label=Instalar complementos
+perm.object.label=Executar plugins
+perm.plugins.label=Ativar plugins
 perm.popup.label=Abrir janelas popup
+perm.script.label=Executar scripts
+perm.stylesheet.label=Carregar folhas de estilo
+perm.trackingprotection.label=Registrando atividade
 
+perm.type.default=Selecione um tipo
 
 # passwords
+pwd.hidePasswords=Esconder senhas
+pwd.showPasswords=Exibir senhas
+pwd.noMasterPasswordPrompt=Tem certeza que deseja exibir suas senhas?
 
+pwd.deleteSelectedTitle=Remover as senhas selecionadas
 
 # preferences
+prefs.deleteSelectedTitle=Remover as preferências selecionadas
 
 # storage
 
@@ -32,3 +49,4 @@ storageUsage=%1$S %2$S
 # form data
 
 # forget
+forget.desc.domain.pre=Esquecer todos os dados dos seguintes tipos associados ao domínio "%S":
