--- a/pt-BR/suite/chrome/common/utilityOverlay.properties
+++ b/pt-BR/suite/chrome/common/utilityOverlay.properties
@@ -29,3 +29,7 @@ updatesItem_pendingFallback=Aplicar atualização agora…
 updatesItem_pendingAccessKey=A
 
 # safeModeRestart
+safeModeRestartPromptTitle=Reiniciar com os complementos desativados
+safeModeRestartPromptMessage=Tem certeza de que deseja desativar todos os complementos e reiniciar?
+safeModeRestartButton=Reiniciar
+safeModeRestartCheckbox=Reiniciar com os complementos desativados
