--- a/pt-BR/suite/chrome/common/viewZoomOverlay.properties
+++ b/pt-BR/suite/chrome/common/viewZoomOverlay.properties
@@ -8,8 +8,11 @@
 #                    don't use digits "0"-"9" for accesskeys
 
 # LOCALIZATION NOTE (fullZoom,textZoom): are never available at the same time
+fullZoom.label=Zoom (%zoom% %)
+fullZoom.accesskey=Z
 
 # labels and accesskeys to emphasize the 100 % and 200 % entries
 
 # label pattern for remaining values, accesskeys are assigned dynamically
+zoom.value.label=%zoom% %
 
