--- a/pt-BR/suite/chrome/mailnews/addressbook/addressBook.properties
+++ b/pt-BR/suite/chrome/mailnews/addressbook/addressBook.properties
@@ -62,6 +62,7 @@ propertyCustom4=Personalizado 4
 ## %B is the month's localized name and %d is the day of the month [1-31].
 ## Don't go using %e here, since it breaks things on Windows!
 ## Separators (a space, dash, etc.) can be used
+dateFormatMonthDay=%d de %B
 
 ## LOCALIZATION NOTE (cityAndStateAndZip): 
 ## %1$S is city, %2$S is state, %3$S is zip
