--- a/pt-BR/suite/chrome/mailnews/imapMsgs.properties
+++ b/pt-BR/suite/chrome/mailnews/imapMsgs.properties
@@ -128,7 +128,7 @@ imapDone=
 
 imapEnterPasswordPromptTitle=Senha do servidor de mensagens
 
-imapUnknownHostError=Não foi possível conectar-se ao servidor "%S".
+imapUnknownHostError=Não foi possível conectar-se ao servidor %S.
 
 imapConnectionRefusedError=Não foi possível conectar-se ao servidor de mail %S. A conexão foi recusada.
 
@@ -209,9 +209,9 @@ imapMoveFolderToTrash=Tem certeza de que deseja excluir a pasta '%S'?
 # "%S" is the name of the folder.
 imapDeleteNoTrash=A excluir desta pasta não poderá ser desfeita e excluirá todas as suas mensagens e subpastas. Tem certeza de que deseja excluir a pasta '%S'?
 
-imapDeleteFolderDialogTitle=Excluir pasta...
+imapDeleteFolderDialogTitle=Excluir pasta
 
-imapDeleteFolderButtonLabel=E&xcluir pasta...
+imapDeleteFolderButtonLabel=&Excluir pasta
 
 # LOCALIZATION NOTE (imapAuthChangeEncryptToPlainSSL): %S is the server hostname
 
