--- a/pt-BR/suite/chrome/mailnews/localMsgs.properties
+++ b/pt-BR/suite/chrome/mailnews/localMsgs.properties
@@ -120,9 +120,9 @@ nsErrorCouldNotConnectViaTls=Não foi possível estabelecer uma conexão TLS ao 
 # "%S" is the name of the folder.
 pop3MoveFolderToTrash=Tem certeza de que deseja excluir a pasta '%S'?
 
-pop3DeleteFolderDialogTitle=Excluir pasta...
+pop3DeleteFolderDialogTitle=Excluir pasta
 
-pop3DeleteFolderButtonLabel=E&xcluir pasta...
+pop3DeleteFolderButtonLabel=&Excluir pasta
 
 
 
