--- a/pt-BR/suite/chrome/common/bookmarks/bm-props.properties
+++ b/pt-BR/suite/chrome/common/bookmarks/bm-props.properties
@@ -2,5 +2,15 @@
 # License, v. 2.0. If a copy of the MPL was not distributed with this
 # file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
+dialogAcceptLabelAddItem=Adicionar
+dialogAcceptLabelSaveItem=Salvar
 dialogAcceptLabelAddLivemark=Se inscrever
+dialogAcceptLabelAddMulti=Adicionar favoritos
+dialogAcceptLabelEdit=Salvar
+dialogTitleAddBookmark=Novo favorito
+dialogTitleAddLivemark=Inscrever nos favoritos
+dialogTitleAddMulti=Novos favoritos
+dialogTitleEdit=Propriedades para "%S"
 
+bookmarkAllTabsDefault=[Nome da pasta]
+newBookmarkDefault=Novo favorito
