--- a/pt-BR/suite/chrome/common/permissions/cookieViewer.properties
+++ b/pt-BR/suite/chrome/common/permissions/cookieViewer.properties
@@ -20,3 +20,4 @@ deleteAllCookiesYes=&Excluir
 deleteAllCookiesSites=Tem certeza de que deseja excluir todos os sites de cookies?
 deleteAllSitesTitle=Excluir sites
 deleteAllSitesYes=&Excluir
+deleteSelectedCookiesTitle=Remover Cookies selecionados
