--- a/pt-BR/suite/chrome/mailnews/compose/composeMsgs.properties
+++ b/pt-BR/suite/chrome/mailnews/compose/composeMsgs.properties
@@ -7,6 +7,7 @@
 #
 ## LOCALIZATION NOTE (unableToOpenFile, unableToOpenTmpFile):
 ## %S will be replaced with the name of file that could not be opened
+unableToOpenFile=Não foi possível abrir o arquivo: %S.
 
 ## @name NS_MSG_UNABLE_TO_SAVE_TEMPLATE
 12502=Não foi possível salvar sua mensagem como modelo.
@@ -85,6 +86,7 @@
 ## @name NS_MSG_ERROR_READING_FILE
 12563=Erro ao ler arquivo.
 
+followupToSenderMessage=O autor desta mensagem solicitou que respostas sejam enviadas somente para ele. Se quiser responder ao newsgroup, adicione uma nova linha no campo de endereçamento, selecione “Newsgroup” na lista de destinatários e forneça o nome do newsgroup.
 
 ## @name NS_MSG_ERROR_ATTACHING_FILE
 ## LOCALIZATION NOTE (12570): argument %S is file name/URI of object to be attached
@@ -140,27 +142,35 @@
 
 ## @name NS_ERROR_SMTP_AUTH_CHANGE_ENCRYPT_TO_PLAIN_NO_SSL
 # LOCALIZATION NOTE (12594): $S is server hostname
+12594=O servidor SMTP %S não parece suportar senhas criptografadas. Se você acabou de definir esta conta, tente alterar o “Modo de autenticação” para “Senha, transmitida de forma insegura” em “Configurar contas | Servidor”. Se esta configuração funcionava e começou a dar erro, este é um cenário comum em que alguém poderia roubar sua senha.
 
 ## @name NS_ERROR_SMTP_AUTH_CHANGE_ENCRYPT_TO_PLAIN_SSL
 # LOCALIZATION NOTE (12595): $S is server hostname
+12595=O servidor SMTP %S não parece suportar senhas criptografadas. Se você acabou de definir esta conta, tente alterar o “Modo de autenticação” para “Senha normal” em “Configurar contas | Servidor”. Se esta configuração funcionava e começou a dar erro, por favor, contate o serviço provedor ou o administrador de e-mail.
 
 ## @name NS_ERROR_SMTP_AUTH_CHANGE_PLAIN_TO_ENCRYPT
 # LOCALIZATION NOTE (12596): $S is server hostname
+12596=O servidor SMTP %S não permite senhas sem criptografia. Por favor, tente alterar o “Modo de autenticação” para “Senha criptografada” em “Configurar contas | Servidor”.
 
 ## @name NS_ERROR_SMTP_AUTH_FAILURE
 # LOCALIZATION NOTE (12597): $S is server hostname
+12597=Não foi possível autenticar-se no servidor SMTP %S. Por favor, verifique sua senha e a opção “Modo de autenticação” em “Configurar contas | Servidor de envio (SMTP)”.
 
 ## @name NS_ERROR_SMTP_AUTH_GSSAPI
 # LOCALIZATION NOTE (12598): $S is server hostname
+12598=O ticket Kerberos/GSSAPI não foi aceito pelo servidor SMTP %S. Por favor, verifique se você está identificado no domínio Kerberos/GSSAPI.
 
 ## @name NS_ERROR_SMTP_AUTH_MECH_NOT_SUPPORTED
 # LOCALIZATION NOTE (12599): $S is server hostname
+12599=O servidor SMTP %S não suporta o modo de autenticação selecionado. Por favor, altere o “Modo de autenticação” em “Configurar contas | Servidor de envio (SMTP)”.
 
 ## @name NS_ERROR_SMTP_AUTH_NOT_SUPPORTED
 # LOCALIZATION NOTE (12600): $S is server hostname
+12600=Não foi possível autenticar-se no servidor SMTP %S. Ele não suporta autenticação (SMTP-AUTH) mas você selecionou usá-la. Por favor, altere o “Modo de autenticação” para “Nenhum” em “Configurar contas | Servidor de envio (SMTP)” ou verifique as instruções junto ao serviço provedor de e-mail.
 
 ## @name NS_ERROR_ILLEGAL_LOCALPART
 # LOCALIZATION NOTE (errorIllegalLocalPart): %s is an email address with an illegal localpart
+errorIllegalLocalPart=Existem caracteres especiais na parte local do endereço %s. Isso ainda não é suportado. Por favor, altere o endereço e tente novamente.
 
 ## Strings use for the save message dialog shown when the user close a message compose window
 saveDlogTitle=Salvar mensagem
@@ -184,8 +194,10 @@ recipientDlogMessage=Esta conta suporta somente destinatários de email. Continu
 ## LOCALIZATION NOTE (addressInvalid): $S is email address
 addressInvalid="%1$S" não é um endereço de email válido por não estar no formato usuário@host. Você deve corrigi-lo antes de enviar o email.
 
+genericFailureExplanation=Verifique se as suas configurações de email e grupos de discussão estão corretas e tente de novo.
 
 ## LOCALIZATION NOTE (undisclosedRecipients): this string must use only US_ASCII characters
+undisclosedRecipients=destinatarios-nao-revelados
 
 ## String used for attachment pretty name, when attachment is a message
 messageAttachmentSafeName=Mensagem anexada
@@ -194,10 +206,13 @@ partAttachmentSafeName=Seção da mensagem anexada
 
 ## String used by the Initialization Error dialog
 initErrorDlogTitle=Edição de mensagem
+initErrorDlgMessage=Um erro ocorreu ao criar a janela de edição de mensagem. Por favor, tente de novo.
 
 ## String used if a file to attach does not exist when passed as
 ## a command line argument
+errorFileAttachTitle=Anexar arquivo
 ## LOCALIZATION NOTE (errorFileAttachMessage): %1$S will be replaced by the non-existent file name. Do not translate
+errorFileAttachMessage=O arquivo %1$S não existe e não pode ser anexado à mensagem.
 
 ## Strings used by Save as Draft/Template dialog
 SaveDialogTitle=Salvar mensagem
@@ -217,7 +232,11 @@ sendMessageCheckWindowTitle=Enviar mensagem
 sendMessageCheckLabel=Tem certeza de que está pronto para enviar esta mensagem?
 sendMessageCheckSendButtonLabel=Enviar
 
+assemblingMessageDone=Montando mensagem…Concluído
+assemblingMessage=Montando mensagem…
 
+smtpDeliveringMail=Enviando email...
+smtpMailSent=Mensagem enviada com sucesso
 
 ## LOCALIZATION NOTE (gatheringAttachment): argument %S is file name/URI of attachment
 
