--- a/pt-BR/suite/chrome/mailnews/search-attributes.properties
+++ b/pt-BR/suite/chrome/mailnews/search-attributes.properties
@@ -13,14 +13,19 @@ Cc=CC
 DisplayName=Apresentar como
 Nickname=Apelido
 AdditionalEmail=Email alternativo
+AnyNumber=Qualquer número
 WorkPhone=Telefone comercial
 HomePhone=Telefone residencial
 Fax=Fax
 Pager=Pager
 Mobile=Celular
+City=Cidade
+Street=Endereço
 Title=Título
 Organization=Empresa
 Department=Setor
 # more mailnews
+FromToCcOrBcc=De, Para, Cc ou Cco
 JunkStatus=Spam
 Label=Rótulo
+Customize=Personalizar…
