--- a/pt-BR/suite/crashreporter/crashreporter-override.ini
+++ b/pt-BR/suite/crashreporter/crashreporter-override.ini
@@ -4,3 +4,5 @@
 ; This file is in the UTF-8 encoding
 [Strings]
 ; LOCALIZATION NOTE (CrashReporterProductErrorText2): The %s is replaced with a string containing detailed information.
+CrashReporterProductErrorText2=SeaMonkey teve um problema e travou. Vamos tentar restaurar as abas e janelas quando ele for reiniciado.\n\nInfelizmente o Crash Reporter está impossibilitado de enviar um relatório do travamento.\n\nDetalhes: %s
+CrashReporterDescriptionText2=SeaMonkey teve um problema e travou. Vamos tentar restaurar as abas e janelas quando ele for reiniciado.\n\nPara ajudar-nos a identificar e corrigir este problema, você pode nos enviar um relatório do travamento.
