Localize the new searchbar UI for Firefox 35

--- a/sk/browser/chrome/browser/search.properties
+++ b/sk/browser/chrome/browser/search.properties
@@ -2,7 +2,16 @@
 # License, v. 2.0. If a copy of the MPL was not distributed with this
 # file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
-searchtip=Hľadať pomocou modulu %S
+searchtip=Hľadať pomocou %S
+
+# LOCALIZATION NOTE (searchPlaceholder): this is shown in the searchbox when
+# the user hasn't typed anything yet.
+searchPlaceholder=Hľadať
+
+# LOCALIZATION NOTE (searchHeader): this is displayed at the top of the panel
+# showing search suggestions.
+# %S is replaced with the name of the current default search engine.
+searchHeader=Vyhľadávanie pomocou %S
 
 # LOCALIZATION NOTE (cmd_pasteAndSearch): "Search" is a verb, this is the
 # search bar equivalent to the url bar's "Paste & Go"
