Bug 1092320 - Log a warning to the console when will-change is out of budget

--- a/sk/dom/chrome/dom/dom.properties
+++ b/sk/dom/chrome/dom/dom.properties
@@ -211,3 +211,5 @@ ImportXULIntoContentWarning=Importovanie uzlov XUL do obsahu dokumentu je zavrhn
 XMLDocumentLoadPrincipalMismatch=Používanie document.load je zakázané na dokumentoch, ktoré pochádzajú z iných okien. Pre dokument je možné zavolať .load len z okna, v ktorom bol daný dokument vytvorený. Použite radšej XMLHttpRequest.
 # LOCALIZATION NOTE: Do not translate "IndexedDB".
 IndexedDBTransactionAbortNavigation=Stále prebiehajúca transakcia IndexedDB bola prerušená navigáciou stránky.
+# LOCALIZATION NOTE (WillChangeBudgetWarning): Do not translate Will-change, %1$S,%2$S,%3$S are numbers.
+WillChangeBudgetWarning=Spotreba pamäte will-change je príliš vysoká. Oblasť pokrytia je %1$S bodov, dostupné množstvo je plocha dokumentu vynásobená hodnotou %2$S (%3$S bodov). Všetky výskyty will-change budú v dokuemnte ignorované, ak je dostupné množstvo prekročené.
