--- a/sq/browser/chrome/browser/browser.properties
+++ b/sq/browser/chrome/browser/browser.properties
@@ -103,13 +103,6 @@ popupShowPopupPrefix=Shfaq '%S'
 badContentBlocked.blocked.message=%S-i po bllokon lëndë në këtë faqe.
 badContentBlocked.notblocked.message=%S-i nuk po bllokon ndonjë lëndë në këtë faqe.
 
-# missing plugin installer
-installPlugin.message = Do të donit të instalohet shtojca e domosdoshme për shfaqjen e medias në këtë faqe?
-installPlugin.button.label=Instaloje %S
-installPlugin.button.accesskey=I
-installPlugin.ignoreButton.label=Mos më pyet sërish
-installPlugin.ignoreButton.accesskey=M
-
 crashedpluginsMessage.title=Shtojca %S u vithis.
 crashedpluginsMessage.reloadButton.label=Ringarkoje faqen
 crashedpluginsMessage.reloadButton.accesskey=R
@@ -594,6 +587,9 @@ getUserMedia.sharingMenuCameraMicrophone = %S (kamerë dhe mikrofon)
 getUserMedia.sharingMenuCameraMicrophoneApplication = %S (kamerë, mikrofon dhe zbatim)
 getUserMedia.sharingMenuCameraMicrophoneScreen = %S (kamerë, mikrofon dhe ekran)
 getUserMedia.sharingMenuCameraMicrophoneWindow = %S (kamerë, mikrofon dhe dritare)
+getUserMedia.sharingMenuCameraApplication = %S (kamerë dhe mikrofon
+getUserMedia.sharingMenuCameraScreen = %S (kamerë dhe ekran)
+getUserMedia.sharingMenuCameraWindow = %S (kamerë dhe dritare)
 getUserMedia.sharingMenuMicrophoneApplication = %S (mikrofon dhe zbatim)
 getUserMedia.sharingMenuMicrophoneScreen = %S (mikrofon dhe ekran)
 getUserMedia.sharingMenuMicrophoneWindow = %S (mikrofon dhe dritare)
@@ -614,3 +610,12 @@ slowStartup.disableNotificationButton.accesskey = o
 customizeTips.tip0 = %1$S: %2$S-in mund ta përshtatni të punojë sipas mënyrës që doni. Thjesht tërhiqni këdo nga sa më sipër te menuja ose paneli. %3$S rreth personalizimit të %2$S-it.
 customizeTips.tip0.hint = Ndihmëz
 customizeTips.tip0.learnMore = Mësoni më tepër
+
+# LOCALIZATION NOTE(appmenu.*.description, appmenu.*.label): these are used for
+# the appmenu labels and buttons that appear when an update is staged for
+# installation or a background update has failed and a manual download is required.
+# %S is brandShortName
+appmenu.restartNeeded.description = Riniseni %S-in që të zbatohen përditësimet
+appmenu.updateFailed.description = Përditësimi i sfondit dështoi, ju lutemi, shkarkoni përditësimin
+appmenu.restartBrowserButton.label = Rinise %S-in
+appmenu.downloadUpdateButton.label = Shkarkoje Përditësimin
