--- a/sq/browser/chrome/browser/devtools/scratchpad.properties
+++ b/sq/browser/chrome/browser/devtools/scratchpad.properties
@@ -19,6 +19,10 @@ openFile.title=Hapni Kartelë
 # open fails.
 openFile.failed=Dështoi leximi i kartelës.
 
+# LOCALIZATION NOTE  (openFile.failed): This is the message displayed when file
+# open fails.
+importFromFile.convert.failed=Dështoi shndërrimi i kartelës nga %1$S në Unikod.
+
 # LOCALIZATION NOTE  (saveFileAs): This is the file picker title, when you save
 # a file in Scratchpad.
 saveFileAs=Ruajeni Kartelën Si
@@ -52,6 +56,11 @@ browserContext.notification=Kjo fletë e papastër po përdoret nën kontekstin 
 # LOCALIZATION NOTE (help.openDocumentationPage): This returns a localized link with
 # documentation for Scratchpad on MDN.
 help.openDocumentationPage=https://developer.mozilla.org/en/Tools/Scratchpad
+
+# LOCALIZATION NOTE (scratchpad.statusBarLineCol): Line, Column
+# information displayed in statusbar when selection is made in
+# Scratchpad.
+scratchpad.statusBarLineCol  = Rreshti %1$S, Shtylla %2$S
 
 # LOCALIZATION NOTE (clearRecentMenuItems.label): This is the label for the
 # menuitem in the 'Open Recent'-menu which clears all recent files.
