--- a/sq/browser/chrome/browser/downloads/downloads.properties
+++ b/sq/browser/chrome/browser/downloads/downloads.properties
@@ -38,6 +38,33 @@ stateBlockedPolicy=U bllokua nga rregullat e sigurisë së zonës suaj
 # Indicates that the download was blocked after scanning.
 stateDirty=U bllokua: Ka gjasa se përmban virus ose spyware
 
+# LOCALIZATION NOTE (blockedMalware, blockedPotentiallyUnwanted,
+#                    blockedUncommon):
+# These strings are shown in the panel for some types of blocked downloads, and
+# are immediately followed by the "Learn More" link, thus they must end with a
+# period.  You may need to adjust "downloadDetails.width" in "downloads.dtd" if
+# this turns out to be longer than the other existing status strings.
+# Note: These strings don't exist in the UI yet.  See bug 1053890.
+blockedMalware=Kjo kartelë përmban virus ose malware.
+blockedPotentiallyUnwanted=Kjo kartelë mund të dëmtojë kompjuterin tuaj.
+blockedUncommon=Kjo kartelë mund të mos jetë e parrezikshme për hapje.
+
+# LOCALIZATION NOTE (unblockHeader, unblockTypeMalware,
+#                    unblockTypePotentiallyUnwanted, unblockTypeUncommon,
+#                    unblockTip, unblockButtonContinue, unblockButtonCancel):
+# These strings are displayed in the dialog shown when the user asks a blocked
+# download to be unblocked.  The severity of the threat is expressed in
+# descending order by the unblockType strings, it is higher for files detected
+# as malware and lower for uncommon downloads.
+# Note: These strings don't exist in the UI yet.  See bug 1053890.
+unblockHeader=Are you sure you want to unblock this file?
+unblockTypeMalware=Kjo kartelë përmban virus ose malware që do të dëmtojë kompjuterin tuaj.
+unblockTypePotentiallyUnwanted=Kjo kartelë, e maskuar si shkarkim i dobishëm, do të kryejë ndryshime të papritura te programet dhe rregullimet tuaja.
+unblockTypeUncommon=Kjo kartelë është shkarkuar prej një sajti jo të njohur dhe potencialisht të rrezikshëm dhe mund të mos jetë e parrezikshme për hapje.
+unblockTip=Mund të kërkoni për një burim alternativ shkarkimi ose të provoni ta shkarkoni kartelën më vonë.
+unblockButtonContinue=Zhbllokoje, sido qoftë
+unblockButtonCancel=Mbromë
+
 # LOCALIZATION NOTE (sizeWithUnits):
 # %1$S is replaced with the size number, and %2$S with the measurement unit.
 sizeWithUnits=%1$S %2$S
