--- a/sq/browser/chrome/browser/places/places.properties
+++ b/sq/browser/chrome/browser/places/places.properties
@@ -5,8 +5,6 @@
 # LOCALIZATION NOTE (tagResultLabel) :
 # This is what we use to form the label (for screen readers)
 # for url bar autocomplete results of type "tag"
-# See createResultLabel() in urlbarBindings.xml 
-tagResultLabel=Etiketë
 recentlyBookmarkedTitle=Faqeruajtur së Fundmi
 recentTagsTitle=Etiketa së Fundmi
 
@@ -18,7 +16,7 @@ OrganizerQueryTags=Etiketa
 # This is what we use to form the label (for screen readers)
 # for url bar autocomplete results of type "bookmark"
 # See createResultLabel() in urlbarBindings.xml 
-bookmarkResultLabel=Faqerojtës
+
 mostVisitedTitle=Më të Vizituarit
 
 load-js-data-url-error=Për arsye sigurie, javascript apo url-ë të dhënash nuk mund të ngarkohen prej dritares apo anështyllës së historikut.
@@ -93,6 +91,17 @@ bookmarksRestoreFilterName=JSON
 bookmarksRestoreFormatError=Lloj kartele i pambuluar.
 bookmarksRestoreParseError=I pazoti të përpunojë kartelë kopjeruajtjeje.
 searchHistory=Kërkoni në Historik
+
+# LOCALIZATION NOTE (tagResultLabel, bookmarkResultLabel, switchtabResultLabel,
+# keywordResultLabel, searchengineResultLabel)
+# Noun used to describe the location bar autocomplete result type
+# to users with screen readers
+# See createResultLabel() in urlbarBindings.xml
+tagResultLabel=Etiketë
+bookmarkResultLabel=Faqerojtës
+switchtabResultLabel=Skedë
+keywordResultLabel=Fjalëkyç
+searchengineResultLabel=Kërkim
 
 # LOCALIZATION NOTE (lockPrompt.text)
 # %S will be replaced with the application name.
