--- a/sq/browser/chrome/browser/search.properties
+++ b/sq/browser/chrome/browser/search.properties
@@ -4,6 +4,15 @@
 
 searchtip=Kërkoni duke përdorur %S
 
+# LOCALIZATION NOTE (searchPlaceholder): this is shown in the searchbox when
+# the user hasn't typed anything yet.
+searchPlaceholder=Kërkoni
+
+# LOCALIZATION NOTE (searchHeader): this is displayed at the top of the panel
+# showing search suggestions.
+# %S is replaced with the name of the current default search engine.
+searchHeader=Kërkim me %S
+
 cmd_clearHistory=Pastro Historik Kërkimesh
 cmd_clearHistory_accesskey=P
 
