--- a/sq/browser/chrome/browser/devtools/webide.properties
+++ b/sq/browser/chrome/browser/devtools/webide.properties
@@ -22,6 +22,10 @@ importHostedApp_header=Jepni URL Manifesti
 notification_showTroubleShooting_label=Diagnostikim
 notification_showTroubleShooting_accesskey=D
 
+# LOCALIZATION NOTE (project_tab_loading): This is shown as a temporary tab
+# title for browser tab projects when the tab is still loading.
+project_tab_loading=Po ngarkohet…
+
 # These messages appear in a notification box when an error occur.
 
 error_cantInstallNotFullyConnected=Nuk instalohet dot projekti. Jo i lidhur plotësisht.
