--- a/sq/browser/chrome/browser/loop/loop.properties
+++ b/sq/browser/chrome/browser/loop/loop.properties
@@ -4,7 +4,17 @@
 
 # Panel Strings
 
+## LOCALIZATION NOTE(clientShortname2): This should not be localized and
+## should remain "Firefox Hello" for all locales.
+clientShortname2=Firefox Hello
+
+## LOCALIZATION_NOTE(first_time_experience.title): clientShortname will be
+## replaced by the brand name
+first_time_experience_title={{clientShortname}} — Fillojani bashkëbisedimit
+first_time_experience_button_label=Si T’ia Fillohet
+
 share_link_header_text=Ndajeni këtë lidhje me dikë për ta ftuar të bisedoni:
+invite_header_text=Ftoni dikë për të biseduar.
 
 ## LOCALIZATION NOTE(invitee_name_label): Displayed when obtaining a url.
 ## See https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#precall-firstrun
@@ -52,13 +62,17 @@ problem_accessing_account=Pati Një Problem Me Hyrjen Në Llogarinë Tuaj
 ## See https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#error for location
 retry_button=Riprovoni
 
-share_email_subject3=Jeni ftuar në një bashkëbisedim
-## LOCALIZATION NOTE (share_email_body3): In this item, don't translate the
+## LOCALIZATION NOTE (share_email_body4): In this item, don't translate the
 ## part between {{..}} and leave the \r\n\r\n part alone
-share_email_body3=Që ta pranoni këtë ftesë, thjesht kopjoni ose klikoni mbi këtë lidhje që të filloni bashkëbisedimin:\r\n\r\n{{callUrl}}
+share_email_body4=Tungjatjeta!\r\n\r\nEjani me mua për një bashkëbisedim video duke përdorur {{clientShortname}}:\r\n\r\nNuk keni pse shkarkoni apo instaloni gjë. Thjesht kopjoni dhe hidheni këtë URL te shfletuesi juaj:\r\n\r\n{{callUrl}}\r\n\r\nNëse dëshironi, mund të mësoni më tepër rreth {{clientShortname}} te {{learnMoreUrl}}\r\n\r\nMirë u dëgjofshim së shpejti!
 share_button=Email
+share_button2=Lidhje Email-i
 copy_url_button=Kopjoje
+copy_url_button2=Kopjoje Lidhjen
 copied_url_button=U kopjua!
+
+
+share_email_subject3=Jeni ftuar në një bashkëbisedim
 
 panel_footer_signin_or_signup_link=Hyni ose Regjistrohuni
 
@@ -85,6 +99,14 @@ new_contact_button=Kontakt i Ri
 ## and click the 'New Contact' button to see the fields.
 new_contact_name_placeholder=Emër
 new_contact_email_placeholder=Email
+new_contact_phone_placeholder=Telefon Firefox OS
+
+contacts_blocked_contacts=Kontakte të Bllokuar
+
+## LOCALIZATION NOTE (new_contact_name_placeholder, new_contact_email_placeholder):
+## These are the placeholders for the fields for entering a new contact
+## See https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
+## and click the 'New Contact' button to see the fields.
 ## LOCALIZATION NOTE (add_contact_button):
 ## This is the button to actually add the new contact
 ## See https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
@@ -174,6 +196,7 @@ initiate_call_button_label2=Gati për të filluar bashkëbisedimin?
 incoming_call_title2=Kërkesë Bashkëbisedimi
 incoming_call_accept_button=Pranoje
 incoming_call_accept_audio_only_tooltip=Pranoje me zë
+incoming_call_accept_audio_video_tooltip=Pranoje me video
 incoming_call_cancel_button=Anuloje
 incoming_call_cancel_and_block_button=Anuloje dhe Bllokoje
 incoming_call_block_button=Bllokoje
@@ -243,7 +266,12 @@ legal_text_and_links3=Duke përdorur {{clientShortname}} pajtoheni me {{terms_of
   dhe {{privacy_notice}}.
 legal_text_tos = Kushtet e Përdorimit
 legal_text_privacy = Shënimet Mbi Privatësinë
-client_shortname_fallback=këtë produkt
+
+## LOCALIZATION NOTE (powered_by_beforeLogo, powered_by_afterLogo):
+## These 2 strings are displayed before and after a 'Telefonica'
+## logo.
+powered_by_beforeLogo=Mundësuar nga
+powered_by_afterLogo=
 
 feedback_call_experience_heading2=Si rrodhi bashkëbisedimi juaj?
 feedback_what_makes_you_sad=Ç’ju trishton?
@@ -268,4 +296,31 @@ feedback_rejoin_button=Rifutuni
 ## LOCALIZATION NOTE (feedback_report_user_button): Used to report a user in the case of
 ## an abusive user.
 feedback_report_user_button=Raportoni Përdorues
+
+help_label=Ndihmë
+tour_label=Tur
+
+## LOCALIZATION NOTE(rooms_default_room_name_template): {{conversationLabel}}
+## will be replaced by a number. For example "Conversation 1" or "Conversation 12".
+rooms_default_room_name_template=Bashkëbisedimi {{conversationLabel}}
+rooms_leave_button_label=Braktise
+rooms_list_copy_url_tooltip=Kopjoni Lidhjen
+## LOCALIZATION NOTE (rooms_list_current_conversations):
+## Semicolon-separated list of plural forms. See:
+## http://developer.mozilla.org/en/docs/Localization_and_Plurals
+## We prefer to have no number in the string, but if you need it for your
+## language please use {{num}}.
+rooms_list_current_conversations=Bashkëbisedim i tanishëm;Bashkëbisedime të tanishme
+rooms_list_delete_tooltip=Fshijeni bashkëbisedimin
+rooms_list_deleteConfirmation_label=Jeni i sigurt?
+rooms_list_no_current_conversations=Pa bashkëbisedime hapur
+rooms_name_this_room_label=I vini emër këtij bashkëbisedimi
+rooms_new_room_button_label=Filloni një bashkëbisedim
+rooms_only_occupant_label=Jeni i pari deri tani.
+rooms_panel_title=Zgjidhni një bashkëbisedim ose filloni një të ri
+rooms_room_full_label=Ka tashmë dy persona në këtë bashkëbisedim.
+rooms_room_full_call_to_action_nonFx_label=Shkarkoni {{brandShortname}}-in që të filloni tuajin
+rooms_room_full_call_to_action_label=Mësoni më tepër rreth {{clientShortname}} »
+rooms_room_joined_label=Dikush hyri te bashkëbisedimi!
+rooms_room_join_label=Hyni në bashkëbisedim
 
